# aoc-2023

./: .ocamlformat  LICENSE  README.md  aoc_2023.opam  dune-project  test_result.txt
lib/: day1.ml  dune
test/: dune  test_day1.ml
